Changed some pages and added one school project

--- a/index.html
+++ b/index.html
@@ -5,46 +5,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Home</title>
     <link rel="icon" type="image/x-icon" href="logos/sitelogo.png">
-    <style>
-        body{
-            font-family: Helvetica;
-            background-color:rgb(24, 26, 24);
-        }
-        .topbtn{
-            padding: 10px 20px;
-            background-color: rgb(22, 24, 24);
-            color: #fff;
-            background-position: center;
-            transition: 0.25s linear;
-            height:50px;
-            width:200px;
-        }
-        .topbtn:hover{
-            background-color: rgb(255, 255, 255);
-            background-size: 300px;
-            border: 2px solid #ffffff;
-            color: rgb(24,26,24);
-        }
-        .btn{
-            padding: 10px 20px;
-            background-color: rgb(24,26,24);
-            border: 2px solid #ffffff;
-            color: #fff;
-            background-position: center;
-            transition: 0.25s linear;
-            height:70px;
-            width:250px;
-            margin-top:1%;
-            display:block
-        }
-        .btn:hover{
-            background-color: rgb(255, 255, 255);
-            background-size: 300px;
-            border: 2px solid #ffffff;
-            color: rgb(24,26,24);
-
-        }
-        </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <header style="text-align: center; ">
@@ -64,10 +25,10 @@
         <button class="btn rounded-full" style="padding-right:25px"onclick="window.open('https://discord.gg/Wha7w3Gd2v');"><img src="logos/dslogo.png" height="30" width="30" style="float:left">Discord</button>
 
     </p>
-    <footer style="border-top: 1px solid rgb(59, 59, 59); margin-top: 250px; text-align: center; ">
-        <p style="padding:4%; color: #58a6ff">
-            <a href="https://t.me/dimaartik">Dmitri Artamonov   © 2022 DA, Inc.</a>
-        </p>
-    </footer>
 </body>
+<footer style="border-top: 1px solid rgb(59, 59, 59); margin-top: 250px; text-align: center; ">
+    <p style="padding:4%; color: #58a6ff">
+        <a href="https://t.me/dimaartik">Dmitri Artamonov   © 2022 DA, Inc.</a>
+    </p>
+</footer>
 </html>
