--- a/schoolprojects.html
+++ b/schoolprojects.html
@@ -5,14 +5,28 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>School Projects</title>
     <link rel="icon" type="image/x-icon" href="logos/sitelogo.png">
-    <style>
-        body{
-            font-family: Helvetica;
-            background-color:rgb(24, 26, 24);
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    soon
+    <header style="text-align: center; ">
+        <a href="index.html"><button class="topbtn" style="margin-top: 0%;" >Home</button></a>
+        <a href="projects.html"><button class="topbtn" style="margin-top: 0%;" >Projects</button></a>
+        <a href="schoolprojects.html"><button class="topbtn" style="margin-top: 0%;" >School projects</button></a>
+        <a href="index.html"><button class="topbtn" style="margin-top: 0%;" >...</button></a> <!--    Soon     -->
+        <a href="index.html"><button class="topbtn" style="margin-top: 0%;" >...</button></a> <!--    Soon     -->
+        <a href="aboutme.html"><button class="topbtn" style="margin-top: 0%;" >About me</button></a> 
+    </header>
+    <h1 style="font-size:40px;color: #fff; text-align: center; margin-top: 10%;">
+        My school projects:
+    </h1>
+    <p>
+        <a href="introtohtml.html"><button class="btn rounded-full" style="margin-top:2%;margin-left: 10%;"> Introduction to HTML/CSS</button></a>
+    </p>
+
 </body>
+<footer style="border-top: 1px solid rgb(59, 59, 59); margin-top: 250px; text-align: center; ">
+    <p style="padding:4%; color: #58a6ff">
+        <a href="https://t.me/dimaartik">Dmitri Artamonov   © 2022 DA, Inc.</a>
+    </p>
+</footer>
 </html>
