--- a/projects.html
+++ b/projects.html
@@ -5,14 +5,21 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Projects</title>
     <link rel="icon" type="image/x-icon" href="logos/sitelogo.png">
-    <style>
-        body{
-            font-family: Helvetica;
-            background-color:rgb(24, 26, 24);
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    soon
+    <header style="text-align: center; ">
+        <a href="index.html"><button class="topbtn" style="margin-top: 0%;" >Home</button></a>
+        <a href="projects.html"><button class="topbtn" style="margin-top: 0%;" >Projects</button></a>
+        <a href="schoolprojects.html"><button class="topbtn" style="margin-top: 0%;" >School projects</button></a>
+        <a href="index.html"><button class="topbtn" style="margin-top: 0%;" >...</button></a> <!--    Soon     -->
+        <a href="index.html"><button class="topbtn" style="margin-top: 0%;" >...</button></a> <!--    Soon     -->
+        <a href="aboutme.html"><button class="topbtn" style="margin-top: 0%;" >About me</button></a> 
+    </header>
 </body>
+<footer style="border-top: 1px solid rgb(59, 59, 59); margin-top: 250px; text-align: center; ">
+    <p style="padding:4%; color: #58a6ff">
+        <a href="https://t.me/dimaartik">Dmitri Artamonov   © 2022 DA, Inc.</a>
+    </p>
+</footer>
 </html>
