Added some features
* Added Blog section.
* Added language select buttons (pretty buggy right now).
* Some optimization changes.

Known issues with languages:

*Language resets when going to another page.
*Can't change language more that one time when in "School projects" section.

--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title id="aboutmetitle">About me</title>
+    <title id="blogtitle">Blog</title>
     <link rel="icon" type="image/x-icon" href="logos/sitelogo.png">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -22,9 +22,9 @@
         <a href="#en" data-reload><img src="flags/gbflag.jpg" height="2%" width="2%" style="display: inline; aspect-ratio: 5/3"></a>
         <a href="#ee" data-reload><img src="flags/eeflag.png" height="2%" width="2%" style="display: inline; aspect-ratio: 5/3"></a>
         <a href="#ru" data-reload><img src="flags/ruflag.png" height="2%" width="2%" style="display: inline; aspect-ratio: 5/3;"></a>
-    <!-- About me heading -->
-    <h1 style="font-size:40px;color: #fff; text-align: center; margin-top: 10%;" id="abtme">
-        About me
+    <!-- Blog heading -->
+    <h1 style="font-size:40px;color: #fff; text-align: center; margin-top: 10%;" id="blg">
+        Blog
     </h1>
     <!-- Language changer -->
     <script type="text/javascript" src="langs.js"></script>
