--- a/aboutme.html
+++ b/aboutme.html
@@ -26,6 +26,12 @@
     <h1 style="font-size:40px;color: #fff; text-align: center; margin-top: 10%;" id="abtme">
         About me
     </h1>
+    <p align="center" style="margin-top: 1%; color: #fff;">
+        My name is Dmitri Artamonov, i live in Tallinn, Estonia. I'm studying in Tallinn Polytechnic School to be a Software Developer.
+        I love Japanese culture, language and everything that is somehow related to Japan. <br> I even started learning Japanese. My dream for the
+        future is moving to Japan and i will do everything to make it come true. My hobby is playing computer games such as Counter-Strike,
+        Valorant and others. <br> This site is partially my school project, but i decided to make it more "fancy".
+    </p>
     <!-- Language changer -->
     <script type="text/javascript" src="langs.js"></script>
 </body>
