--- a/blog.html
+++ b/blog.html
@@ -26,6 +26,9 @@
     <h1 style="font-size:40px;color: #fff; text-align: center; margin-top: 10%;" id="blg">
         Blog
     </h1>
+    <p>
+        <pre align="center" style="margin-top: 5%; color: #fff; padding-right: 30%;">08/06/2022                        Added some information in About me page.</pre>
+    </p>
     <!-- Language changer -->
     <script type="text/javascript" src="langs.js"></script>
 </body>
